# Robo-Dutchman

./: .gitignore  .gitmodules  README.md  calen_setup.sh
Matlab/: fk.m  ik.m  ik.txt
launch/: amcl.launch  camera_test.launch  collect_data.launch  generate_map.launch  hebi_teleop.launch  main.launch  main2.launch  particle_filter_demo.launch  planner_test.launch  planning.launch  vision.launch  vision.launch.save
launch/tests/: arm1.launch  arm2.launch  arm3.launch  hebi_teleop.launch  localizer_test.launch  teleop_wheels.launch
matlab/: motor_test.m
src/arduino_bridge/sensor_bridge/: CMakeLists.txt  package.xml
src/arm_planner/: CMakeLists.txt  package.xml
src/arm_planner/action/: ArmTrajectory.action
src/arm_planner/scripts/: arm_planner.py  arm_planner_node.py  kinematics.py  print_fk_node.py  test1.py  test2.py  test3.py  trajectory_generator.py
src/config/: package.xml
src/config/launch/: amcl.launch  config.launch  gmapping.launch  gmapping.launch.save  main.launch  odom.launch  planning.launch  sensors.launch  teleop_wheels.launch  vision.launch
src/config/maps/: course1.pgm  course1.yaml  course2.pgm  course2.yaml  course3.yaml  map.pgm
src/firmware/sensors/: sensors.ino
src/hebi/hebiros/: CMakeLists.txt
src/localization/: package.xml
src/obiwan/: CMakeLists.txt  package.xml
src/obiwan/src/: backup.cpp  (+5 more)
src/teleoperation/: CMakeLists.txt  package.xml
src/teleoperation/scripts/: .teleop_wheels.py.swp  teleop.py  teleop_wheels.py
src/teleoperation/src/: arm_teleop_config_space.cpp
src/test_package/: CMakeLists.txt  package.xml
(+35 files in other folders)
