<package format="2">
    <name>teleoperation</name>
    <version>1.0.0</version>
    <description>
        This package provides teleoperation control of the Robo Dutchman
    </description>
    <maintainer email="calenr@andrew.cmu.edu">Calen Robinson</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>joy</depend>
    <depend>sensor_msgs></depend>
    <depend>hebi_cpp_api</depend>

</package>

